Agregar imagenes a las secciones y al primer formulario del index

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <main>
         <section class="form box">
+            <img src="./assets/vector.svg" alt="Logo de Alura">
             <form id="formulario">
-                <label for="input-texto">Solo letras minusculas sin acentos</label>
+                <img src="./assets/info-logo.svg" alt="Acceder a mas información">
+                <label for="input-texto">Solo letras minúsculas sin acentos</label>
                 <textarea class="text-area" name="input-texto" name="input-texto" id="input-texto"  placeholder="Ingrese el texto aqui" cols="5" rows="50"></textarea>
                 <div class="btn-container">
                     <input class="btn" type="submit" value="Encriptar" id="btn-encriptar">
@@ -20,6 +22,7 @@
             </form>
         </section>
         <aside class="aside box">
+            <img src="./assets/muñeco.svg" alt="Mujer usando una lupa">
             <label for="mensaje-texto">Mensaje encriptado</label>
             <textarea class="text-area" name="mensaje-texto" id="mensaje-texto" cols="5" rows="50"></textarea>
             <input class="btn" type="submit" value="Copiar" id="btn-copy">
