--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <section class="form box">
-            <img src="./assets/vector.svg" alt="Logo de Alura">
+            <img class="logo-alura" src="./assets/vector.svg" alt="Logo de Alura">
             <form id="formulario">
                 <img src="./assets/info-logo.svg" alt="Acceder a mas información">
                 <label for="input-texto">Solo letras minúsculas sin acentos</label>
