--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section class="form box">
             <img class="logo-alura" src="./assets/vector.svg" alt="Logo de Alura">
             <form id="formulario">
-                <img src="./assets/info-logo.svg" alt="Acceder a mas información">
+                <img class="logo-info" src="./assets/info-logo.svg" alt="Acceder a mas información">
                 <label for="input-texto">Solo letras minúsculas sin acentos</label>
                 <textarea class="text-area" name="input-texto" name="input-texto" id="input-texto"  placeholder="Ingrese el texto aqui" cols="5" rows="50"></textarea>
                 <div class="btn-container">
@@ -22,7 +22,7 @@
             </form>
         </section>
         <aside class="aside box">
-            <img src="./assets/muñeco.svg" alt="Mujer usando una lupa">
+            <img class="vector-muñeco" src="./assets/muñeco.svg" alt="Mujer usando una lupa">
             <label for="mensaje-texto">Mensaje encriptado</label>
             <textarea class="text-area" name="mensaje-texto" id="mensaje-texto" cols="5" rows="50"></textarea>
             <input class="btn" type="submit" value="Copiar" id="btn-copy">
