--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
             <img class="logo-alura" src="./assets/vector.svg" alt="Logo de Alura">
             <form id="formulario">
                 <img class="logo-info" src="./assets/info-logo.svg" alt="Acceder a mas información">
-                <label for="input-texto">Solo letras minúsculas sin acentos</label>
-                <textarea class="text-area" name="input-texto" name="input-texto" id="input-texto"  placeholder="Ingrese el texto aqui" cols="5" rows="50"></textarea>
+                <textarea class="text-area-1" name="input-texto" name="input-texto" id="input-texto"  placeholder="Ingrese el texto aqui" cols="5" rows="50"></textarea>
+                <label class="input-texto" for="input-texto">Solo letras minúsculas sin acentos</label>
                 <div class="btn-container">
-                    <input class="btn" type="submit" value="Encriptar" id="btn-encriptar">
-                    <input class="btn" type="submit" value="Desencriptar" id="btn-desencriptar">
+                    <input class="btn-blue" type="submit" value="Encriptar" id="btn-encriptar">
+                    <input class="btn-lightgray" type="submit" value="Desencriptar" id="btn-desencriptar">
                 </div>
             </form>
         </section>
         <aside class="aside box">
             <img class="vector-muñeco" src="./assets/muñeco.svg" alt="Mujer usando una lupa">
-            <label for="mensaje-texto">Mensaje encriptado</label>
-            <textarea class="text-area" name="mensaje-texto" id="mensaje-texto" cols="5" rows="50"></textarea>
-            <input class="btn" type="submit" value="Copiar" id="btn-copy">
+            <label class="mensaje-texto" for="mensaje-texto">Ningun mensaje fue encontrado</label>
+            <textarea class="text-area-2" name="mensaje-texto" id="mensaje-texto" cols="5" rows="50">Ingresa el texto que deseas encriptar</textarea>
+            <input class="btn-white" type="submit" value="Copiar" id="btn-copy">
         </aside>
     </main>
     <footer class="footer">
