Cambiar nombre de la imagen logo alura de  Vector.svg a vector.svg

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img class="logo-alura" src="./assets/Vector.svg" alt="Logo de Alura">
+        <img class="logo-alura" src="./assets/vector.svg" alt="Logo de Alura">
     </header>
     <main>
         <section class="main-section">
